<?xml version="1.0"?>
<package format="2">
  <name>los_node_01</name>

  <version>0.1.0</version>

  <description>Calculates and publishes reference heading of vehicle waypoint and estimated state stream to follows waypoints using line-of-sight strategy</description>
  <maintainer email="bartboogmans@hotmail.com">Bart Boogmans</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/bartboogmans/OpenSail></url>
  <author email="bartboogmans@hotmail.com">Bart Boogmans</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
